ShelterSingleton code review